[project]
name = "yfinance-trader"
version = "0.1.0"
description = "An MCP server for stock trading using yfinance"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "yfinance>=0.2.36",
    "mcp>=1.2.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[tool.hatch.build]
include = [
    "main.py",
    "README.md"
]
exclude = [
    "requirements.txt"
] 